--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "set DEBUG=app,app:* & nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/lollykrown/Hng-Tutoring-App.git",
   "keywords": [
     "tutor"
   ],
