--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3"
   },
+  "engines": {
+    "node": "12.13.0"
+  },
   "nodemonConfig": {
     "restartable": "rs",
     "ignore": [
