--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "body-parser": "^1.19.0",
     "chalk": "^4.0.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "flat-cache": "^2.0.1",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.10",
