--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.0.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-validator": "^6.4.1",
     "flat-cache": "^2.0.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
